# ven-ayuda.me

./: .env.example  README.md  docker-compose.yml  taskfile.sh
.claude/: settings.json
django/: .dockerignore  .gitignore  .python-interpreter.txt  Dockerfile  README.md  pyproject.toml
django/config/: admin.py  api.py  settings.py  urls.py
django/core/: apps.py  auth.py  managers.py  signals.py
django/core/admin/: __init__.py  file_upload.py  help_request.py  help_request_attachment.py  push_subscription.py  rescue_participation.py  rescuer_profile.py  user.py
django/core/management/commands/: README.md
django/core/middleware/: csrf_exempt.py
django/core/migrations/: 0001_initial.py  0002_rescuerprofile_helprequest_resolution_note_and_more.py
django/core/models/: __init__.py  file_upload.py  help_request.py  help_request_attachment.py  push_subscription.py  rescue_participation.py  rescuer_profile.py  user.py
django/core/routers/: __init__.py  auth.py  file_uploads.py  help_requests.py  rescuers.py
django/core/schemas/: auth.py  file_uploads.py  help_requests.py
django/core/services/: auth.py  file_storage_service.py  jwt_service.py  push_notifications.py
django/core/tasks/: __init__.py  file_uploads_cleanup.py  rescuer_notifications.py
django/core/tests/: test_help_requests.py
django/core/utils/: __init__.py  geo.py
django/docs/: job_assignment_actionable_slug_migration.md
django/scripts/: generate_vapid_keys.py
docs/: tunnel-setup.md  ven-emergencias-tunnel.yml.example
mobile/: ENVIRONMENT.md  app.json  openapi.json  package-lock.json  (+3 more)
(+153 files in other folders)
